# toast-cli

./: .clinerules  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  VERSION  pyproject.toml
.github/workflows/: push.yml
docs/: CNAME  architecture.html  index.html  installation.html  overview.html  plugins.html
docs/css/: style.css
docs/js/: data.js  diagram.js  diagram3d.js  main.js
tests/: test_git.py  test_ssm_plugin.py  test_storage.py  test_utils.py
toast/: __init__.py  helpers.py
toast/plugins/: base_plugin.py  cdw_plugin.py  ctx_plugin.py  dot_plugin.py  env_plugin.py  git_plugin.py  prompt_plugin.py  ssm_plugin.py  storage.py  utils.py
